# E-Retail

./: .env.example  .gitignore  .replit  README.md  pyproject.toml  pytest.ini  requirements.txt
electronics_network/: settings.py  urls.py
fixtures/: demo_data.json
network/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
network/management/commands/: create_superuser.py  load_demo_data.py
network/migrations/: 0001_initial.py
network/schemas/: __init__.py  network_node.py
network/services/: __init__.py  hierarchy.py  validation.py
network/tests/: __init__.py  factories.py  test_admin.py  test_management.py  test_models.py  test_permissions.py  test_schemas.py  test_serializers.py  test_utils.py  test_views.py
network/utils/: __init__.py  helpers.py
staticfiles/admin/css/: custom_admin.css
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_token_auth.py
